<resources>
    <string name="app_name">nippon</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_build_version" translatable="false">UAT Version 0.9.0</string>
    <string name="app_filter" translatable="false">Transo Nippon(UAT)</string>
    <string name="only_char" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="only_char_no_space" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="only_char_number" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789abcdefghijklmnopqrstuvwxyz</string>
    <string name="only_char_number_specialchar" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789abcdefghijklmnopqrstuvwxyz@#$*,&amp;</string>
    <string name="only_number" translatable="false">0123456789</string>
    <string name="only_caps_number" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="only_caps_number_space" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 </string>
    <string name="profile" translatable="false">Profile</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="splash_head" translatable="false">Welcome to on-demand technology for logistics.</string>
    <string name="brand" translatable="false">Transo</string>
    <string name="req_prices" translatable="false">Enter request price</string>
    <string name="dialog_default_title" translatable="false">Here\'s a message!</string>
    <string name="alert" translatable="false">Alert</string>
    <string name="action_send" translatable="false">Send</string>
    <string name="action_submit" translatable="false">Submit</string>
    <string name="add_location" translatable="false">Add Location</string>
    <string name="action_proceed" translatable="false">Proceed</string>
    <string name="action_confirm" translatable="false">Confirm</string>
    <string name="action_update" translatable="false">Update</string>
    <string name="action_view" translatable="false">View</string>
    <string name="allot" translatable="false">Allot</string>
    <string name="lr_status" translatable="false">LR Status</string>
    <string name="request_lrs" translatable="false"><u>Request LR\'s</u></string>
    <string name="requested_lrs" translatable="false"><u>Requested LR\'s</u></string>
    <string name="postal_code" translatable="false">Postal Code *</string>
    <string name="add_remark" translatable="false">Add Remark</string>
    <string name="close_trip" translatable="false">Close Trip</string>
    <string name="action_cancel" translatable="false">Cancel</string>
    <string name="action_retry" translatable="false">Retry</string>
    <string name="action_click" translatable="false">Click</string>
    <string name="documents" translatable="false">Documents</string>
    <string name="downloads" translatable="false">Downloads</string>
    <string name="action_yes" translatable="false">Yes</string>
    <string name="action_no" translatable="false">No</string>
    <string name="confirm_cancel_trip" translatable="false">Are you sure you want to cancel the trip?</string>
    <string name="reason" translatable="false">Enter the reason for trip cancellation</string>
    <string name="choose_file" translatable="false">Choose file</string>
    <string name="choose_csv_file" translatable="false">Choose CSV file</string>
    <string name="gallery" translatable="false">Gallery</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="choose_image" translatable="false">Upload Image</string>
    <string name="already_added_one_drop" translatable="false">One drop is already added</string>
    <string name="update_password" translatable="false">Update Password</string>
    <string name="new_password" translatable="false">Enter new password *</string>
    <string name="confirm_password" translatable="false">Confirm password *</string>
    <string name="add_warehouse_to_proceed" translatable="false">To proceed, you need to add a Warehouse. Click here to add a Warehouse</string>
    <string name="do_you_want_to_logout" translatable="false">Do you want to logout?</string>
    <string name="do_you_want_to_delete" translatable="false">Do you want to delete?</string>
    <string name="do_you_want_to_exit" translatable="false">Do you want to exit?</string>
    <string name="userid" translatable="false">Enter Email ID/Mobile No.*</string>
    <string name="pass" translatable="false">Password*</string>
    <string name="Sign_in" translatable="false">Login</string>
    <string name="request_password" translatable="false">Request Password</string>
    <string name="Sign_up" translatable="false">Create Account</string>
    <string name="forgot" translatable="false"><u>Forgot Password?</u></string>
    <string name="forgot_email" translatable="false">Enter registered Mobile No./Email Id</string>
    <string name="requestbtn" translatable="false">Request Password</string>
    <string name="create_booking" translatable="false">Create Booking</string>
    <string name="Quote_Responses" translatable="false">Quote Responses</string>
    <string name="intransit" translatable="false">IN-Transit</string>
    <string name="bookings" translatable="false">Bookings</string>
    <string name="reports" translatable="false">Reports</string>
    <string name="support" translatable="false">Support</string>
    <string name="service" translatable="false">Terms of Service</string>
    <string name="privacy" translatable="false">Privacy Notice</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="aboutus" translatable="false">About Us</string>
    <string name="tonnage" translatable="false">Monthly Tonnage</string>
    <string name="to" translatable="false">To</string>
    <string name="from" translatable="false">From</string>
    <string name="from_location" translatable="false">From Location *</string>
    <string name="to_location" translatable="false">To Location *</string>
    <string name="from_zone" translatable="false">From Zone</string>
    <string name="to_zone" translatable="false">To Zone</string>
    <string name="carrier" translatable="false">Carrier</string>
    <string name="fn" translatable="false">Enter First Name *</string>
    <string name="ln" translatable="false">Enter Last Name *</string>
    <string name="label_home" translatable="false">Home</string>
    <string name="label_administration" translatable="false">Administration</string>
    <string name="add_user" translatable="false">Add User</string>
    <string name="display_user" translatable="false">Display Users</string>
    <string name="invoice" translatable="false">Invoice</string>
    <string name="packing" translatable="false">Packing</string>
    <string name="pick" translatable="false">Pickup Location</string>
    <string name="source" translatable="false">Source</string>
    <string name="drop" translatable="false">Drop Location</string>
    <string name="capacity" translatable="false">Capacity</string>
    <string name="warehouse" translatable="false">Warehouse</string>
    <string name="sub_branch" translatable="false">Sub Branch</string>
    <string name="live_trips" translatable="false">Live Trips</string>
    <string name="invoice_customer" translatable="false">Upload Invoice</string>
    <string name="tracking" translatable="false">Tracking</string>
    <string name="pod_upload" translatable="false">POD Upload</string>
    <string name="lr_no_details" translatable="false">LR Number Details</string>
    <string name="lr_allocation" translatable="false">LR Allocation</string>
    <string name="lr_allocate" translatable="false">LR Allocate</string>
    <string name="warehouse_list" translatable="false">Warehouse List</string>
    <string name="sub_branch_list" translatable="false">Sub Branch List</string>
    <string name="vehicle_list" translatable="false">Vehicle List</string>
    <string name="username" translatable="false">Enter User Name *</string>
    <string name="company" translatable="false">Enter Company Name *</string>
    <string name="website" translatable="false">Enter Website URL</string>
    <string name="city" translatable="false">Enter City *</string>
    <string name="state" translatable="false">Enter State *</string>
    <string name="state_name" translatable="false">State</string>
    <string name="stateName" translatable="false">State *</string>
    <string name="cityName" translatable="false">City *</string>
    <string name="pincode" translatable="false">Pincode *</string>
    <string name="src" translatable="false">Enter Source *</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="email_id" translatable="false">Email ID *</string>
    <string name="your_name" translatable="false">Name *</string>
    <string name="companyName" translatable="false">Company Name *</string>
    <string name="mobile_number" translatable="false">Mobile Number *</string>
    <string name="confirmpassword" translatable="false">Confirm Password *</string>
    <string name="signup" translatable="false">Sign Up</string>
    <string name="tat_mandatory" translatable="false">TAT *</string>
    <string name="message" translatable="false">Message</string>
    <string name="delivery_date_mandatory" translatable="false">Delivery Date *</string>
    <string name="pickup_schedule_date_mandatory" translatable="false">Pick-up scheduled Date *</string>
    <string name="vehicle_placed_datetime_at_origin_mandatory" translatable="false">Vehicle Placed at Origin (Date &amp; Time) *</string>
    <string name="vehicle_reported_datetime_at_dest_mandatory" translatable="false">Vehicle Reported at Destination (Date &amp; Time) *</string>
    <string name="veh_released_datetime_at_dest_mandatory" translatable="false">Vehicle Release at Destination (Date &amp; Time) *</string>
    <string name="vendor_bills_ageing_mandatory" translatable="false">Vendor Bills Ageing *</string>
    <string name="present_status_mandatory" translatable="false">Present Status *</string>
    <string name="status_or_remarks" translatable="false">Status/Remarks</string>
    <string name="enter_day_mandatory" translatable="false">Enter Day No. *</string>
    <string name="pod_status" translatable="false">POD Status</string>
    <string name="pods_submit" translatable="false">POD\'s Submit</string>
    <string name="pods_submission_date" translatable="false">POD Submission Date</string>
    <string name="total_km_mandatory" translatable="false">Total Km *</string>
    <string name="avg_km_covered_perday_mandatory" translatable="false">Average KM Coverage/Day *</string>
    <string name="tgt_km_covered_mandatory" translatable="false">Target KM Covered *</string>
    <string name="actual_days" translatable="false">Actual Days</string>
    <string name="actual_km_mandatory" translatable="false">Actual KM *</string>
    <string name="balance_km_mandatory" translatable="false">Balance KM *</string>
    <string name="ontime_or_delayed" translatable="false">On-Time / Delayed</string>
    <string name="ontime_or_delay_percent" translatable="false">On-Time / Delayed %</string>
    <string name="actual_days_of_delivery" translatable="false">Actual Days of delivery</string>
    <string name="reason_for_delay" translatable="false">Reason for Delay</string>
    <string name="halting_days" translatable="false">Halting Days</string>
</resources>