<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                style="@style/TextInputEditBase1"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                android:drawableStart="@drawable/ic_vector_person"
                android:hint="@string/your_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_name"
                style="@style/TextInputEditBase1"
                android:drawableStart="@drawable/ic_vector_warehouse"
                android:hint="@string/companyName"
                android:importantForAutofill="no"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/TextInputEditBase1"
                android:drawableStart="@drawable/ic_vector_email"
                android:hint="@string/email_id"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile"
                style="@style/TextInputEditBase1"
                android:drawableStart="@drawable/ic_vector_call"
                android:inputType="number"
                android:maxLength="10"
                android:importantForAutofill="no"
                android:hint="@string/mobile_number" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout1"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/TextInputEditBase1"
                android:drawableStart="@drawable/ic_vector_padlock"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:hint="@string/pass" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout1"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmpassword"
                style="@style/TextInputEditBase1"
                android:drawableStart="@drawable/ic_vector_padlock"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:hint="@string/confirmpassword" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            style="@style/ButtonStyle6"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>

</FrameLayout>
